PySCF 1.7.? (2020-?-?)
----------------------
* Added
  - ADC (RADC and UADC)
  - Analytical nuclear gradients for state-average CASSCF
* Fixed
  - Bug in Mole.fromstring


PySCF 1.7.3 (2020-6-10)
-----------------------
* Added
  - CcECP basis
  - Spin 1RDM for shci
  - PM localization for charge populations based on Becke partition
* Improved
  - Compatibility of get_jk methods between mcscf class and scf class
  - CPPE interface
  - Interface between IAO and PM
* Fixed
  - an CCSD integral bug introduced in 1.7.1
  - Td as its subgroup C2v
  - Fix an error when calculating grad of dft method with "HF" as xc



PySCF 1.7.2 (2020-5-13)
-----------------------
* Added
  - pbc.eph
  - State-average CASSCF example
  - Spin density analysis to uhf.analyze()
  - Passing point group and wfnsym to Dice
  - Analytical nuclear gradients for PBC SCF methods (based FFTDF)
  - Geometry optimizer and Gradients scanner for pbc
  - ccECPs and corresponding basis sets
  - Interacting hybrid method i-CCSD/MP2
  - Allow FNOs to be specified by number of active virtuals
  - Enable frozen natural orbital CC
  - Partial Cholesky orthogonalization
  - Use requested initial guess in DHF
* Improved
  - libxc5 compatibility
  - Redundant def2-*-jkfit basis sets were replaced by the def2-universal-jkfit basis
  - FCIDUMP reader
  - Treatment of breaksym in UHF init_guess function
  - literature references and DOIs
  - Ensure active orbitals are not changed during MCSCF canonicalization
  - Improve linear dependency treatment in projection function in scf/addons.py
  - Use customized get_xmat method for x2c if applicable
* Fixed
  - Integral bug in magnetizability
  - Integer overflow in multigrid
  - pbc.mdf h5 file initialization
  - density fitting auxiliary basis for cc-pV*Z
  - Handle basis and pp for ghost atoms in pbc initialization
  - ecp treatments for ghost atoms
  - FCI wfnsym initial guess
  - SCF initial guess for super-heavy elements