@@ -4908,6 +4908,7 @@ int ECPrad_part(double *ur, double *rs, int rs_off, int nrs, int inc,
         double ubuf[nrs];
         double r2[nrs];
         double *ak, *ck, *u_ecp;
+        double s;
         int npk;
         int ish, i, kp, n;
         int nrs_now;
@@ -4926,10 +4927,11 @@ int ECPrad_part(double *ur, double *rs, int rs_off, int nrs, int inc,
                         ck = env + ecpbas[ish*BAS_SLOTS+PTR_COEFF];
 
                         for (i = 0; i < nrs; i++) {
-                                ubuf[i] = ck[0] * exp(-ak[0]*r2[i]);
+                                s = ck[0] * exp(-ak[0]*r2[i]);
                                 for (kp = 1; kp < npk; kp++) {
-                                        ubuf[i] += ck[kp] * exp(-ak[kp]*r2[i]);
+                                        s += ck[kp] * exp(-ak[kp]*r2[i]);
                                 }
+                                ubuf[i] = s;
                                 if (i > 2 &&
                                     fabs(ubuf[i]) < SIM_ZERO &&
                                     fabs(ubuf[i-1]) < SIM_ZERO) {
@@ -5764,7 +5766,7 @@ void type1_rad_part(double *rad_all, int lmax, double k, double aij,
         double rur[nrs];
         double bval[nrs*lmax1];
         int lab, i, n;
-        double kaij, fac, tmp;
+        double kaij, fac, tmp, s;
         double *prad;
 
         kaij = k / (2*aij);
@@ -5797,9 +5799,11 @@ void type1_rad_part(double *rad_all, int lmax, double k, double aij,
                 }
                 prad = rad_all + lab * lmax1;
                 for (i = lab%2; i <= lmax; i+=2) {
+                        s = prad[i];
                         for (n = 0; n < nrs; n++) {
-                                prad[i] += rur[n] * bval[n*lmax1+i];
+                                s += rur[n] * bval[n*lmax1+i];
                         }
+                        prad[i] = s;
                 }
         }
 }
@@ -6153,7 +6157,7 @@ int ECPscalar_sph(double *out, int *dims, int *shls, int *atm, int natm,
         if (has_value) {
                 int i;
                 for (i = 0; i < dij; i++) {
-                        buf1[i] = buf1[i] + buf2[i];
+                        buf1[i] += buf2[i];
                 }
                 ECPscalar_distribute(out, buf1, dims, 1, di, dj);
         } else {
@@ -6200,7 +6204,7 @@ int ECPscalar_cart(double *out, int *dims, int *shls, int *atm, int natm,
         if (has_value) {
                 int i;
                 for (i = 0; i < dij; i++) {
-                        buf1[i] = buf1[i] + buf2[i];
+                        buf1[i] += buf2[i];
                 }
                 ECPscalar_distribute(out, buf1, dims, 1, di, dj);
         } else {
@@ -6297,7 +6301,7 @@ void ECPscalar_optimizer(ECPOpt **opt, int *atm, int natm, int *bas, int nbas, d
         int *ecpbas = bas + (int)(env[AS_ECPBAS_OFFSET])*BAS_SLOTS;
         int necpbas = (int)(env[AS_NECPBAS]);
 
-        double r2;
+        double r2, s;
         double *ak, *ck, *uk;
         int npk;
         int i, ib, kp;
@@ -6312,9 +6316,11 @@ void ECPscalar_optimizer(ECPOpt **opt, int *atm, int natm, int *bas, int nbas, d
                 for (i = 0; i < (1 << LEVEL_MAX); i++) {
                         r2 = rs_gauss_chebyshev2047[i]*rs_gauss_chebyshev2047[i];
                         uk[i] = ck[0] * exp(-ak[0]*r2);
+                        s = uk[i];
                         for (kp = 1; kp < npk; kp++) {
-                                uk[i] += ck[kp] * exp(-ak[kp]*r2);
+                                s += ck[kp] * exp(-ak[kp]*r2);
                         }
+                        uk[i] = s;
                 }
                 uk += (1 << LEVEL_MAX);
         }
